src/main/java/com/example/reservation/reservationsystem/global/error/exception/ErrorCode.java
package com.example.reservation.reservationsystem.global.error.exception;

public interface ErrorCode {
    String getCode();
    String getMessage();
    int getStatus();
}
